--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
       <div class="Hotel__wrapper">
         <div class="header__wrapper">
-          <div class="header__logo">CayoBeach</div>
+          <div class="logo">CayoBeach</div>
           <nav class="header__nav">
             <ul class="header__ul">
               <li class="header__li">
@@ -140,7 +140,7 @@
             <p class="events__p">Realizamos todo tipo de eventos</p>
           </div>
           <div class="events__cards">
-            <div class="events__card">
+            <div class="events__card-one">
               <div class="events__img-wrapper">
                 <img
                   src="/image-tb.png"
@@ -161,14 +161,7 @@
                 <button class="events__button">Me interesa</button>
               </div>
             </div>
-            <div class="events__card">
-              <div class="events__img-wrapper">
-                <img
-                  src="/image-wt.png"
-                  alt="image-wt"
-                  class="events__card-img"
-                />
-              </div>
+            <div class="events__card-two">
               <div class="events-wrapper__card-title">
                 <h3 class="events__h3">
                   en <span class="events__h3-boldfont">Playa Sur</span>
@@ -181,11 +174,145 @@
                 <input type="date" name="trip-start" value="2024-09-10" />
                 <button class="events__button">Me interesa</button>
               </div>
+              <div class="events__img-wrapper">
+                <img
+                  src="/image-wt.png"
+                  alt="image-wt"
+                  class="events__card-img"
+                />
+              </div>
             </div>
           </div>
         </div>
       </section>
       <!--events end-->
+
+      <!--reserve start-->
+      <section class="reserve">
+        <div class="Hotel__wrapper">
+          <div class="reserve__wrapper-title">
+            <h5 class="reserve__h5">Una super experiencia para contar</h5>
+            <button class="reserve__button">Reservar ahora</button>
+          </div>
+        </div>
+      </section>
+      <!--reserve end-->
+
+      <!--price start-->
+      <section class="price">
+        <div class="Hotel__wrapper">
+          <div class="price__wrapper-title">
+            <h6 class="price__h6">Habitaciones de lujo</h6>
+            <p class="price__p-title">
+              Vea todo nuestro catálogo de habitaciones
+            </p>
+          </div>
+          <div class="price__wrapper">
+            <button class="price__button-left">
+              <img src="/arrow2.png" alt="" class="price__button-img-left" />
+            </button>
+            <div class="price__wrapper-cards">
+              <div class="price__card">
+                <img src="/number1.png" alt="" class="price__card-img" />
+                <p class="price__card-one-p">Wilderness Club at Big Ceddar</p>
+                <div class="price__title-one">2 Baños</div>
+                <div class="price__title-price">
+                  <div class="price__title-dollar">$816</div>
+                  <div class="price__title-night">/3 night</div>
+                </div>
+              </div>
+              <div class="price__card">
+                <img src="/number2.png" alt="" class="price__card-img" />
+                <p class="price__card-one-p">Wilderness Club at Big Ceddar</p>
+                <div class="price__title-one">1 Baño con jacujacuzzi</div>
+                <div class="price__title-price">
+                  <div class="price__title-dollar">$2016</div>
+                  <div class="price__title-night">/6 night</div>
+                </div>
+              </div>
+              <div class="price__card">
+                <img src="/number3.png" alt="" class="price__card-img" />
+                <p class="price__card-one-p">Wilderness Club at Big Ceddar</p>
+                <div class="price__title-one">Habitación matrimonial</div>
+                <div class="price__title-price">
+                  <div class="price__title-dollar">$1024</div>
+                  <div class="price__title-night">/8 night</div>
+                </div>
+              </div>
+            </div>
+            <button class="price__button-right">
+              <img
+                src="/arrow.png"
+                alt="arrow"
+                class="price__button-img-right"
+              />
+            </button>
+          </div>
+        </div>
+      </section>
+      <!--price end-->
+
+      <!--footer start-->
+      <footer class="footer">
+        <div class="Hotel__wrapper">
+          <div class="footer__wrapper-content">
+            <div class="footer__logo-title">
+              <div class="logo">CayoBeach</div>
+              <div class="footer__title">
+                Descripción del hotel. Detalles que los hagan especial
+              </div>
+            </div>
+            <nav class="footer__nav">
+              <ul class="footer__ul">
+                <li class="footer__li"><a href="">Habitaciones</a></li>
+                <li class="footer__li"><a href="">Servicios</a></li>
+                <li class="footer__li"><a href="">Eventos</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="footer__contacts">
+            <div class="footer__contact">
+              © Logo Hotel 2023. Derechos reservados
+            </div>
+            <div class="footer__contact-socialMedia">
+              <div class="footer__contact-search">Encuentranos en:</div>
+              <div class="footer__contact-links">
+                <a
+                  href="https://ru-ru.facebook.com/"
+                  class="footer__contact-facebook"
+                >
+                  <img
+                    src="/facebook.png"
+                    alt="facebook"
+                    class="footer__facebook-img"
+                  />
+                </a>
+                <a
+                  href="https://www.instagram.com/"
+                  class="footer__contact-instagram"
+                >
+                  <img
+                    src="/inst.png"
+                    alt="instagram"
+                    class="footer__instagram-img"
+                  />
+                </a>
+                <a
+                  href="https://twitter.com/?lang=ru"
+                  class="footer__contact-twitter"
+                >
+                  <img
+                    src="/twit.png"
+                    alt="twitter"
+                    class="footer__twitter-img"
+                  />
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+      <!--footer end-->
     </main>
 
     <footer></footer>
